modified index.html and css

--- a/template/index.html
+++ b/template/index.html
@@ -74,7 +74,7 @@
 										<img src="images/lightbulb.jpg" alt="light bulb image" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Great Idea!</a></h3>
+										<h3><a href="https://github.com/Psage23/responsive-web-design-I.git" class="link">Great Idea!</a></h3>
 										<p>Responsive website</p>
 									</header>
 								</article>
