--- a/template/landing.html
+++ b/template/landing.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Landing - Forty by HTML5 UP</title>
+		<title>Pamela Sage Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -45,14 +45,14 @@
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/pic07.jpg" alt="" />
+								<img src="images/bakery.jpg" alt="delicious desserts" />
 							</span>
 							<header class="major">
-								<h1>Landing</h1>
+								<h1>Sweet Eat's Bakery</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>HTML and CSS layout and design
+								</p>
 							</div>
 						</div>
 					</section>
@@ -64,14 +64,19 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h2>Sed amet aliquam</h2>
+										<h2>Check it Out</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+									<p class="codepen" data-height="265" data-theme-id="0" data-default-tab="css,result" data-user="Psage23" data-slug-hash="rNBgGzV" data-preview="true" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="User Interface I:  Project 2 - Sweet Eats Bakery">
+										<span>See the Pen <a href="https://codepen.io/Psage23/pen/rNBgGzV">
+										User Interface I:  Project 2 - Sweet Eats Bakery</a> by Pamela (<a href="https://codepen.io/Psage23">@Psage23</a>)
+										on <a href="https://codepen.io">CodePen</a>.</span>
+									  </p>
+									  <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 								</div>
 							</section>
 
 						<!-- Two -->
-							<section id="two" class="spotlights">
+							<!--<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
 										<img src="images/pic08.jpg" alt="" data-position="center center" />
@@ -120,10 +125,10 @@
 										</div>
 									</div>
 								</section>
-							</section>
+							</section>-->
 
 						<!-- Three -->
-							<section id="three">
+							<!--<section id="three">
 								<div class="inner">
 									<header class="major">
 										<h2>Massa libero</h2>
@@ -133,7 +138,7 @@
 										<li><a href="generic.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
-							</section>
+							</section>-->
 
 					</div>
 
