--- a/template/index.html
+++ b/template/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<!--<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>-->
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -66,7 +66,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Sweet's Eats Bakery</a></h3>
-										<p>HTML and CSS only</p>
+										<p>HTML and CSS project</p>
 									</header>
 								</article>
 								<article>
@@ -75,7 +75,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/Psage23/responsive-web-design-I.git" class="link">Great Idea!</a></h3>
-										<p>Responsive website</p>
+										<p>Responsive design project</p>
 									</header>
 								</article>
 								<!--<article>
