--- a/template/landing.html
+++ b/template/landing.html
@@ -51,7 +51,7 @@
 								<h1>Sweet Eat's Bakery</h1>
 							</header>
 							<div class="content">
-								<p>HTML and CSS layout and design
+								<p>HTML and CSS project
 								</p>
 							</div>
 						</div>
@@ -172,7 +172,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#"><pamelasage3@gmail class="com"></pamelasage3@gmail></a>
 									</div>
 								</section>
 								<section>
