--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -99,7 +99,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #242943;
+		background: #021d36;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -2752,7 +2752,8 @@ input, select, textarea {
 			min-height: 23em;
 			overflow: hidden;
 			position: relative;
-			width: 40%;
+			width: 50%;
+			border: 10px solid white;
 		}
 
 			.tiles article .image {
@@ -2827,31 +2828,31 @@ input, select, textarea {
 			}
 
 			.tiles article:nth-child(4n - 1), .tiles article:nth-child(4n - 2) {
-				width: 60%;
+				width: 50%;
 			}
 
 			.tiles article:nth-child(6n - 5):before {
-				background-color: #6fc3df;
+				background-color: #59585a;
 			}
 
 			.tiles article:nth-child(6n - 4):before {
-				background-color: #8d82c4;
+				background-color: #59585a;
 			}
 
 			.tiles article:nth-child(6n - 3):before {
-				background-color: #ec8d81;
+				background-color: #59585a;
 			}
 
 			.tiles article:nth-child(6n - 2):before {
-				background-color: #e7b788;
+				background-color: #59585a;
 			}
 
 			.tiles article:nth-child(6n - 1):before {
-				background-color: #8ea9e8;
+				background-color: #59585a;
 			}
 
 			.tiles article:nth-child(6n):before {
-				background-color: #87c5a4;
+				background-color: #59585a;
 			}
 
 		@media screen and (max-width: 1280px) {
@@ -3380,7 +3381,7 @@ input, select, textarea {
 		-webkit-align-items: center;
 		-ms-align-items: center;
 		align-items: center;
-		background-image: url("../../images/largeImg.jpg");
+		background-image: url("../../images/florian-schneider-NdBsn0WQadw-unsplash.jpg");
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -3392,7 +3393,7 @@ input, select, textarea {
 		background-size: cover;
 		border-bottom: 0 !important;
 		cursor: default;
-		height: 60vh;
+		height: 10vh;
 		margin-bottom: -3.25em;
 		max-height: 32em;
 		min-height: 22em;
@@ -3410,12 +3411,12 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			pointer-events: none;
-			background-color: #242943;
+			background-color: #0c0c0c;
 			content: '';
 			display: block;
 			height: 100%;
 			left: 0;
-			opacity: 0.80;
+			opacity: 0.50;
 			position: absolute;
 			top: 0;
 			width: 100%;
@@ -3481,7 +3482,7 @@ input, select, textarea {
 				}
 
 		#banner.major {
-			height: 75vh;
+			height: 25vh;
 			min-height: 30em;
 			max-height: 50em;
 		}
@@ -3805,7 +3806,7 @@ input, select, textarea {
 		opacity: 0;
 		overflow: hidden;
 		padding: 3em 2em;
-		position: fixed;
+		/* position: fixed; */
 		top: 0;
 		visibility: hidden;
 		width: 100%;
